Fix z-index of left/right columns in #about
The flipbook is 960px wide pulled 480px left, which blocked clicking on
the links under "Seeing is Disbelieving". Give the text a high z-index
until the flipbook opens, then give the turned pages the higher z.

--- a/css/morereal.css
+++ b/css/morereal.css
@@ -678,6 +678,13 @@ hr{
 /* TURN.JS STUFF                */
 /* ============================ */
 
+#description {
+  position: relative;
+  z-index: 3;
+}
+.tabloid-active #description {
+  z-index: 0;
+}
 div#flipbook{
     width:960px;
 	left:-480px;
